--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db3
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+#C?u h?nh cho hibernate t? ??ng t?o b?ng v? hi?n th? nh?ng c?u l?nh sql ?? th?c thi.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.show.sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hb2dll.auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
